# 2-course

./: .gitignore  README.md
Русский язык/: 1.docx  RYaiKR.odt  Доклад по русскому.docx
вычмат/: 20_04_20_Samulenkov_Lab5.docx  4 лаба.docx  5 лаба.docx  ReshenieIntegralaSdvoynymperschetom.docx  Sbornik_dz.docx  Titulny_list.odt  pravilnye_lektsii.docx  ~$арубин.docx  Зарубин.docx  Зарубин2.docx  Контрольная3.docx  ОтчётИнтерполяцияЛагранжа.odt
вычмат/Computational_Mathematics-master/: Отчёт по курсовой, ЗарубинМЕ.docx  титульник.docx
вычмат/Computational_Mathematics-master/CourseWork/CourseWork/: CourseWork.cpp
вычмат/Computational_Mathematics-master/CourseWork/ipch/coursework-d52fcbe9/: coursework-24133d5e.ipch
вычмат/Computational_Mathematics-master/lab_7/lab_7/: lab_7.cpp
вычмат/Лабы для других/: (11.05.20)_Ружаковский_Отчёт4лаба.docx  4 лаба для Вадима.docx  Метод Рунге-Кутта 2 порядка.docx
информационные технологии/: L1_Информационные системы.ppt  myApp.rar  Введение в R.pptx
информационные технологии/KURS_PROJECT-Kate (3)/: KURS_PROJECT-Kate.rar
информационные технологии/KURS_PROJECT-Kate (3)/KURS_PROJECT-Kate/: Data — копия.csv  Data.csv  supporting.txt
информационные технологии/KURS_PROJECT-Kate (3)/KURS_PROJECT-Kate/calculator/: server.R  ui.R
информационные технологии/KURS_PROJECT-Kate (3)/KURS_PROJECT-Kate/calculator/www/: ert.html  trtr.css
информационные технологии/myApp/: .RData  calc.R  server.R  ui.R
информационные технологии/myApp/rsconnect/shinyapps.io/naiskulov/: myapp.dcf
информационные технологии/myApp/www/: colorInput.js
информационные технологии/кк/: .Rhistory  calc.R  server.R  ui.R
тервер/: ДЗ14+КОНТРОЛЬНАЯЗарубинИА831.docx
учебная практика/: Vadya.txt  БИНАРНЫЕ  и ТЕКСТОВЫЕ ФАЙЛЫ.doc  Код для Артёма.docx  МУ_ИА831_2020.docx  Метод_указания_ИА-731.docx  Отчёт по учебной практике.docx  Отчёт по учебной практикеРужаковский.docx  Отчёт по учебной практикеСальников.docx  Учебное пособие визуального программирования.docx  титульный лист.docx
эвм/: Kolosova_813_EVM.docx  Laboratornaya_rabota_3_EVM.docx  Otchet_6__3.docx  OtchyotEVM_3laba.docx  Otchyot_1_laba_2.docx  Otchyot_2_laba_Zarubin.docx  Отчет, Зарубин, иа-831.docx  Отчет, Пляскина, ип-715.docx  Отчёт 1 лаба.docx  Отчёт 5 лаба.docx  ОтчётЭВМ_4лаба.docx  отчёт 6 лаба.docx
эвм/pc/: CMakeLists.txt  main.c
эвм/pc/includes/: asm.h  basic.h  bigChars.h  cpu.h  memory.h  readKey.h  signals.h  term.h  ui.h
эвм/pc/src/: asm.c  basic.c  bigChars.c  cpu.c  memory.c  readKey.c  rpn.c  signals.c  term.c  ui.c
эвм/pc/tests/: CMakeLists.txt  main.c  tests.c  tests.h
экономика/: Зарубин_Тема_1.docx
экономика/allbest-o-00075187/: 75187(Начальный образец).docx  75187.docx  75187.rtf  Реферат по экономике Зарубин М..doc  Реферат по экономике Зарубин М..docx  Реферат по экономике Зарубин М.1.doc  Рефератпослепеределывания.docx
электротехника/: 1 лаба.docx  2 лаба.docx  3 лаба.docx  4 лаба.docx  5 лаба.docx  6 лаба.docx  Bez_imeni_2.odt  Отчёт 1 лабораторная работа(Зарубин, Амельченко)ИА-831.docx  Отчёт 4 лабораторная работа(Зарубин, Амельченко)ИА-831.docx  Отчёт 4 лабораторная работа.docx  Отчёт 5 лабораторная работа(Зарубин, Амельченко)ИА-831.docx  Отчёт 5 лабораторная работа.docx  Отчёт 6 лабораторная работа(Зарубин, Амельченко)ИА-831.docx
(+18 files in other folders)
